# API/swagger.json
@@ -53,16 +53,8 @@
         {
             "name": "CRUD de Medicos",
             "description": "Endpoints de medicos"
-        },
-        {
-            "name": "CRUD de Enfermeiros",
-            "description": "Endpoints de enfermeiros"
-        },
-        {
-            "name": "Função de Atestados",
-            "description": "Endpoints de atestados"
         }
-    ],
+        ],
     "paths": {
         "/": {
             "get": {
@@ -490,180 +482,6 @@
                     },
                     "500": {
                         "description": "Não foi possível excluir medico"
-                    }
-                }
-            }
-        },
-        "/enfermeiros": {
-            "get": {
-                "tags": [
-                    "CRUD de Enfermeiros"
-                ],
-                "summary": "Endpoint para obter todos os enfermeiros",
-                "responses": {
-                    "200": {
-                        "description": "Lista de enfermeiros cadastrados"
-                    },
-                    "500": {
-                        "description": "Servidor não está respondendo"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "CRUD de Enfermeiros"
-                ],
-                "summary": "Endpoint para cadastrar novo enfermeiro",
-                "requestBody": {
-                    "description": "Dados de acesso",
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "nome": {
-                                        "type": "string",
-                                        "default": "Denise Costa"
-                                    },
-                                    "email": {
-                                        "type": "string",
-                                        "default": "denispenis@gmail.com"
-                                    },
-                                    "senha": {
-                                        "type": "string",
-                                        "default": "senha123"
-                                    },
-                                    "ecip": {
-                                        "type": "string",
-                                        "default": "123456"
-                                    },
-                                    "data_nascimento": {
-                                        "type": "datetime",
-                                        "default": "1967-09-07T08:00:00.000Z"
-                                    },
-                                    "area": {
-                                        "type": "string",
-                                        "default": "Cardiologia"
-                                    },
-                                    "telefone": {
-                                        "type": "string",
-                                        "default": "19971348290"
-                                    },
-                                    "endereco": {
-                                        "type": "string",
-                                        "default": "Rua das Flores, 123, Bairro Jardim, Cidade Exemplo"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "Novo enfermeiro cadastrado"
-                    },
-                    "400": {
-                        "description": "Erro ao cadastrar enfermeiro, envie nome, email, senha, crm, especialidade e endereco"
-                    }
-                }
-            }
-        },
-        "/enfermeiros/{id}": {
-            "put": {
-                "tags": [
-                    "CRUD de Enfermeiros"
-                ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "description": "Id do enfermeiro a ser alterado",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "summary": "Endpoint para alterar dados do enfemreiro",
-                "requestBody": {
-                    "description": "Dados de exemplo",
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "id": {
-                                        "type": "integer",
-                                        "default": 1
-                                    },
-                                    "nome": {
-                                        "type": "string",
-                                        "default": "Denise Costa"
-                                    },
-                                    "email": {
-                                        "type": "string",
-                                        "default": "denispenis@gmail.com"
-                                    },
-                                    "senha": {
-                                        "type": "string",
-                                        "default": "senha123"
-                                    },
-                                    "ecip": {
-                                        "type": "string",
-                                        "default": "123456"
-                                    },
-                                    "data_nascimento": {
-                                        "type": "datetime",
-                                        "default": "1967-09-07T08:00:00.000Z"
-                                    },
-                                    "area": {
-                                        "type": "string",
-                                        "default": "Cardiologia"
-                                    },
-                                    "telefone": {
-                                        "type": "string",
-                                        "default": "19971348290"
-                                    },
-                                    "endereco": {
-                                        "type": "string",
-                                        "default": "Rua das Flores, 123, Bairro Jardim, Cidade Exemplo"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "202": {
-                        "description": "Enfermeiro alterado com sucesso"
-                    },
-                    "400": {
-                        "description": "Erro ao cadastrar enfermeiro, envie nome, email, senha, crm, especialidade e endereco"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "CRUD de Enfermeiros"
-                ],
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "description": "Id do enfermeiro a ser excluido",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "summary": "Endpoint para excluir um enfemreiro",
-                "responses": {
-                    "204": {
-                        "description": "Enfermeiro alterado com sucesso"
-                    },
-                    "500": {
-                        "description": "Não foi possível excluir enfemreiro"
                     }
                 }
             }
